fixed issue with divider overlapping sidebar

--- a/portfolio.css
+++ b/portfolio.css
@@ -118,6 +118,7 @@ article p {
     padding-top:                   15px;
     margin-left:                   15px;
     margin-bottom:                 40px;
+    background-color:              #fffff0;
 }
 
 #sidebarMobile {
